<resources>
    <string name="app_name">IMDBProject</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    // MENU
    <string name="categories">Kategoriler</string>
    <string name="home">Anasayfa</string>
    <string name="movies">Filmler</string>
    <string name="logOut">Çıkış Yap</string>


    // BACK TOOLBAR TEXTVIEW
    <string name="empty">Boş metin satırı</string>
    <string name="favoritesPage">Favori Filmlerim</string>
    <string name="allMoviesPage">Tüm Filmler</string>
    <string name="allCategoriesPage">Kategoriler</string>
    <string name="homePage">Anasayfa</string>
    <string name="movieDetailPage">Film Detayı</string>



    // IMDB MOVIE
    <string name="title">Başlık</string>
    <string name="year">Yıl</string>
    <string name="runtime">Süre</string>
    <string name="actors">Oyuncular</string>
    <string name="producer">Yapımcı</string>
    <string name="director">Yönetmen</string>
    <string name="rating">IMDB Puanı</string>
    <string name="genres">Kategoriler</string>




    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>